M11: a document can be written and found over HTTP, and survives its node dying
90 tests green, check passing. Everything M10 built sat behind a Java method
until now -- the durable write path existed and nothing outside a test could
reach it. PUT /{index}/_doc/{id} and GET /{index}/_search close that, and a
document written over HTTP survives its writer dying before any publication,
which is asserted rather than assumed.

Three things the responses say that they did not have to. Coverage is always
reported, because a node serves the shards it holds and with no fan-out yet it
may hold some of an index and not the rest -- a hit count without coverage is a
confident answer over a fraction of the data, indistinguishable from a complete
one, which is the failure HANDOFF.md records eight times. A misdirected write is
refused with the owner named, the same shape as a lost activation race, because
telling the caller who won is what stops it guessing. And a successful write
reports what was actually guaranteed, the write-ahead log, rather than only
"created", since the segment it will live in may not be published yet.

Routing mirrors OperationRouting.calculateScaledShardId, which is private, and
has to keep mirroring it: a node hashing documents differently from the data
plane would write to one shard and search another, and the symptom would be a
search returning nothing rather than an error.

Three bugs, each of which failed quietly. Both handlers blocked an HTTP thread
waiting on the search pool, so the client saw RST_STREAM rather than anything
diagnosable. A single-shard request resolves to query-and-fetch, so the context
was already freed and asking again produced "No search context found" -- a 404
reading like a missing document rather than a double fetch. And FetchPhase was
constructed with an empty sub-phase list, which is what loads _source: every hit
came back with an id, no body, and no error at all. It is built by SearchModule
now, as Node does it.

Marked par